# serializer version: 1
# name: TestQuadXWaypointsCostEqual.test_snapshot
  -0.007
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.1
  0.004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.10
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.100
  0.052
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.101
  0.996
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.102
  -0.009
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.103
  -0.039
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.104
  -0.004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.105
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.106
  -0.001
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.107
  0.935
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.108
  -2.55
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.109
  2.988
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.11
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.110
  1.641
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.111
  0.629
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.112
  0.317
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.113
  0.568
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.114
  0.909
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.115
  0.44
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.116
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.117
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.118
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.119
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.12
  0.968
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.120
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.121
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.122
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.123
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.124
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.125
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.126
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.127
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.128
  0.021
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.129
  -0.831
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.130
  0.177
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.131
  0.23
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.132
  -0.363
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.133
  1.602
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.134
  -1.199
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.135
  2.001
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.136
  -0.644
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.137
  1.724
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.138
  3.718
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.139
  0.564
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.140
  0.118
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.141
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.142
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.143
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.122,  0.798, -0.267]),
    'state_of_interest': array([-0.   , -0.001,  0.935]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.144
  -1.492
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.145
  1.355
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.146
  -6.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.147
  -0.083
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.148
  0.026
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.149
  0.027
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.150
  0.996
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.151
  0.004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.152
  -0.002
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.153
  0.717
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.154
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.155
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.156
  0.947
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.157
  -2.337
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.158
  -0.312
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.159
  -0.812
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.160
  0.741
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.161
  0.635
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.162
  0.322
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.163
  0.729
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.164
  0.9
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.165
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.166
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.167
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.168
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.169
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.17
  0.051
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.170
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.171
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.172
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.173
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.174
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.175
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.176
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.177
  0.067
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.178
  -0.835
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.179
  0.123
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.18
  0.051
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.180
  0.265
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.181
  -0.429
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.182
  1.567
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.183
  -1.311
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.184
  1.964
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.185
  -0.547
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.186
  1.528
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.187
  3.773
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.188
  0.724
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.189
  0.118
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.19
  0.049
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.190
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.191
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.192
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.121,  0.799, -0.255]),
    'state_of_interest': array([0.   , 0.   , 0.947]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.193
  0.669
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.194
  1.093
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.195
  2.293
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.196
  -0.133
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.197
  0.043
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.198
  0.029
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.199
  0.99
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.2
  0.002
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.20
  0.049
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.200
  -0.009
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.201
  -0.037
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.202
  1.102
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.203
  0.002
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.204
  0.007
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.205
  0.981
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.206
  0.904
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.207
  2.028
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.208
  -0.356
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.209
  0.182
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.21
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.210
  0.279
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.211
  0.62
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.212
  0.225
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.213
  0.112
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.214
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.215
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.216
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.217
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.218
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.219
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.22
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.220
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.221
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.222
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.223
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.224
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.225
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.226
  0.061
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.227
  -0.842
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.228
  0.008
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.229
  0.209
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.23
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.230
  -0.581
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.231
  1.492
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.232
  -1.284
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.233
  2.019
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.234
  -0.429
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.235
  1.513
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.236
  3.676
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.237
  1.114
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.238
  0.118
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.239
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.24
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.240
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.241
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.119,  0.806, -0.222]),
    'state_of_interest': array([0.002, 0.007, 0.981]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.242
  -0.985
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.243
  -7.925
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.244
  3.569
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.245
  -0.116
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.246
  -0.01
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.247
  0.051
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.248
  0.992
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.249
  0.172
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.25
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.250
  0.071
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.251
  1.348
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.252
  0.006
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.253
  0.018
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.254
  1.019
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.255
  0.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.256
  -2.741
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.257
  2.059
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.258
  0.505
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.259
  0.252
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.26
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.260
  0.543
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.261
  0.49
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.262
  0.735
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.263
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.264
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.265
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.266
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.267
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.268
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.269
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.27
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.270
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.271
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.272
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.273
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.274
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.275
  0.032
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.276
  -0.844
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.277
  -0.014
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.278
  0.353
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.279
  -0.549
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.28
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.280
  1.436
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.281
  -1.268
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.282
  2.047
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.283
  -0.384
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.284
  1.733
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.285
  3.651
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.286
  0.787
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.287
  0.12
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.288
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.289
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.29
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.290
  dict({
    'collision': False,
    'cost_direction': 0.002,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.115,  0.817, -0.183]),
    'state_of_interest': array([0.006, 0.018, 1.019]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.3
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.30
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.31
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.32
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.33
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.34
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.35
  0.234
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.36
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.37
  -0.148
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.38
  1.578
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.39
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.4
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.40
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.41
  -0.807
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.42
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.43
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.44
  -0.014
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.45
  dict({
    'collision': False,
    'cost_direction': 2.523,
    'cost_distance': 0.119,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.121,  0.799, -0.234]),
    'state_of_interest': array([-0.   ,  0.   ,  0.968]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.46
  2.144
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.47
  -0.523
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.48
  3.533
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.49
  0.032
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.5
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.50
  -0.013
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.51
  0.043
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.52
  0.998
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.53
  -0.022
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.54
  -0.045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.55
  -0.59
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.56
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.57
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.58
  0.944
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.59
  1.721
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.6
  1.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.60
  -0.384
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.61
  2.253
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.62
  0.558
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.63
  0.672
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.64
  0.637
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.65
  0.354
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.66
  0.53
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.67
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.68
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.69
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.7
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.70
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.71
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.72
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.73
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.74
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.75
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.76
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.77
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.78
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.79
  0.06
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.8
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.80
  -0.789
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.81
  0.307
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.82
  0.396
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.83
  -0.078
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.84
  1.6
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.85
  -1.311
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.86
  1.845
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.87
  -0.863
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.88
  1.67
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.89
  3.773
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.9
  -0.763
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.90
  -0.274
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.91
  0.122
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.92
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.93
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.94
  dict({
    'collision': False,
    'cost_direction': 0.005,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.121,  0.799, -0.258]),
    'state_of_interest': array([-0.   , -0.   ,  0.944]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.95
  -7.672
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.96
  0.758
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.97
  2.75
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.98
  -0.058
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.99
  0.034
# ---
